# mcpmark-notion

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  DOCKER_USAGE.md  Dockerfile  README.md  add_notion_property.py  build-docker.sh  config.json  create_additional_templates.py  create_github_templates.py  create_notion_database_demo.py  cspell.config.yaml  docker-compose.yml  eval_pipeline.py  evaluate.py  main.py  mcp_utils.py  mcpbench.py  notion_duplicate_page.py  notion_task_runner.py  pipeline.py  pyproject.toml  requirements.txt  results_parser.py  run-benchmark.sh  run-task.sh  task_discovery_analysis.md
.github/: PULL_REQUEST_TEMPLATE.md
app/: README.md  app.py  demo_agent.py  demo_evaluator.py  demo_model_config.py  demo_notion_utils.py  demo_task_manager.py
docs/: EVALUATION_README.md  REORGANIZATION.md  installation_and_docker_usage.md  introduction.md  quickstart.md
example/: duplicate_child_page_demo.py
examples/: duplicate_child_page_demo.py  duplicate_current_page_demo.py  explore_notion.py
legacy/: eval_pipeline.py  eval_pipeline_with_duplication.py  evaluate_with_page_id.py  verify_with_page_id_example.py
src/: agent.py  agent_mcp_builder.py  errors.py  evaluator.py  factory.py  factory_v3.py  logger.py  model_config.py  notion_login.py  pipeline.py  results_reporter.py  services.py
tests/: README.md  __init__.py  run_all_tests.py  test_end_to_end.py  test_login.py  test_page_duplication.py  test_pipeline_demo.py  test_real_verification.py  test_refactor_integration.py  test_results_reporting.py  test_task_manager.py  (+1 more)
(+613 files in other folders)
